# python_project_inspector

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  report.py  todo.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vite.webview.config.ts  vitest.config.ts  webview.html
frontend/scripts/: i18next-cli.mjs
frontend/src/: App.tsx  main.tsx  navigation.tsx  webview-main.tsx
specs/001-git-history-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-restore-ui-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-graph-explorer-ui/: data-model.md  fp-refactor-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vscode-extension-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ui-simplification-backend-driven/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-graph-ui-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/ppi/cli/: main.py
templates/: graph.js  index.html  ui.js
tests/: conftest.py
tests/contract/: test_analyze_json_progress.py  test_cli_contract.py  test_contract_parity.py  test_http_api.py  test_query_dispatch_parity.py  test_restored_http_contract.py  test_result_format.py  test_snapshot_reads.py  test_store_schema.py  test_store_writer_v2.py  test_vscode_allowlist_sync.py
vscode-extension/: .vscodeignore  LICENSE  README.md  esbuild.mjs  esbuild.test.mjs  package-lock.json  package.json  tsconfig.json
(+211 files in other folders)
